<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            tools:ignore="WebViewLayout">

            <LinearLayout
                android:id="@+id/liner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvl_plclist"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/act_plclist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/choose_time"
                        android:textColor="@color/purple_500"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvl_dashboardList"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/act_dashboardList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/select_dashboard"
                        android:textColor="@color/purple_500"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dashboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="15dp"
                android:layout_below="@id/liner" />

        </RelativeLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                app:menu="@menu/bottom_nav_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_anchor="@id/bottomAppBar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <RelativeLayout
        android:id="@+id/drawerPane"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include
            layout="@layout/app_sidebar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </include>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>
