<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/im_logo"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="180dp"
                    android:src="@drawable/servilink_logo" />

                <RelativeLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/im_logo"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        android:padding="30dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="#fff"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/cpdusername"
                                android:background="@null"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:boxBackgroundColor="@color/white"
                                android:layout_marginTop="20dp">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_userid"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_person_24"
                                    android:drawablePadding="10dp"
                                    android:hint="@string/username"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/cpdTypeLayout"
                                app:endIconMode="password_toggle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:boxBackgroundColor="@color/white"
                                android:layout_marginTop="20dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:drawablePadding="10dp"
                                    android:password="true"
                                    android:drawableStart="@drawable/ic_baseline_lock_24"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black" />

                            </com.google.android.material.textfield.TextInputLayout>




                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/bt_login"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp"
                                android:background="@color/purple_500"
                                android:text="@string/login"
                                android:textColor="#ffffff" />

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>