<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp">

                <RelativeLayout
                    android:id="@+id/rl_date_shift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/qqet_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
                        tools:ignore="TooDeepLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:fontFamily="@font/nunitonans_regular"
                            android:hint="@string/entry_date"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvl_timeselection"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
                        tools:ignore="TooDeepLayout"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_time1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:fontFamily="@font/nunitonans_regular"
                            android:hint="@string/choose_time"
                            android:textAlignment="center" />
                        <!--<AutoCompleteTextView
                            android:id="@+id/act_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none"
                            android:text="@string/choose_time"
                            android:textColor="@color/purple_500"
                            tools:ignore="LabelFor" />-->

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cpdTypeLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="wrap_content"
                        android:layout_height="63dp"
                        android:layout_alignBaseline="@id/qqet_date"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RelativeOverlap">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_tempName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:focusable="false"
                            android:inputType="none"
                            android:text="@string/choose_shift"
                            android:textColor="@color/purple_500"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rl_date_shift"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="4dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="5"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:id="@+id/tv_index"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.0"
                            android:fontFamily="@font/nunitonans_regular"
                            android:padding="5dp"
                            android:scrollbars="horizontal"
                            android:text="Index"

                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tv_parameterName"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.0"
                            android:fontFamily="@font/nunitonans_regular"
                            android:padding="5dp"
                            android:scrollbars="horizontal"
                            android:text="TagName"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />


                        <TextView
                            android:id="@+id/et_paravalue"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="2dp"

                            android:layout_weight="2.0"
                            android:fontFamily="@font/nunitonans_regular"
                            android:padding="5dp"
                            android:paddingEnd="15dp"
                            android:text="Enter TagValue"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <View
                        android:id="@+id/UnderLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:background="@color/light" />

                    <!--<androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="4dp">-->
                       <!-- <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="200dp"
                            android:scrollbars="vertical">-->
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:paddingBottom="50dp"
                            android:layout_marginBottom="200dp"
                            android:scrollbars="vertical" />
                    <!--</ScrollView>-->
                   <!-- </androidx.cardview.widget.CardView>-->

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_sumit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/rounded_rectangle"

                        android:fontFamily="@font/nunitonans_regular"
                        android:text="@string/submit"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/rounded_rectangle"
                        android:fontFamily="@font/nunitonans_regular"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/drawerPane"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include
            layout="@layout/app_sidebar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </include>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>
